# azure-terraform-sample

./: .gitignore  Makefile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: check-push.yml  dev-release.yml
fastapi_sample/: main.py
terraform/: appservice.tf  main.tf  provider.tf  resourcegroup.tf  terraform.tf
tests/: test_main.py
