[tool.poetry]
name = "openai-api-fastapi"
version = "0.1.0"
description = ""
authors = ["Takasaki Kazunari <kz-takasaki@kddi-agile.com>"]
readme = "README.md"
packages = [{include = "fastapi_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"
datamodel-code-generator = "^0.20.0"
pytest = "^7.3.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude = '''
(
  ^/fastapi_sample/schemas.py
)
'''

[tool.isort]
profile = "black"
line_length = 79
include_trailing_comma = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__", "./fastapi_sample/azure_client_sample.py", "./fastapi_sample/schemas.py"]
max-complexity = 10
